# Gravix

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Gravix.sln  README.md  build_release.py
Gravix/: CMakeLists.txt
Gravix-Runtime/: CMakeLists.txt
Gravix-Runtime/Source/: App.cpp  AppLayer.cpp  AppLayer.h
Gravix-ScriptCore/: CMakeLists.txt  Gravix-ScriptCore.csproj
Gravix-ScriptCore/Source/: Entity.cs  InternalCalls.cs  Main.cs  Player.cs  ScriptInterface.cs
Gravix-ScriptCore/Source/Gravix/: Attributes.cs  Debug.cs  Input.cs  InternalCalls.cs  KeyCode.cs  MouseCode.cs  Vector2.cs  Vector3.cs
Gravix-ScriptCore/Source/Gravix/Scene/: Components.cs  Entity.cs  MonoBehaviour.cs
Gravix-ScriptCore/Source/Interop/: ScriptInstanceManager.cs
Gravix-Vulkan/: CMakeLists.txt
Gravix/Audio/: CMakeLists.txt
Gravix/Core/: CMakeLists.txt
Gravix/Platform/: CMakeLists.txt
Gravix/Renderer/: CMakeLists.txt
Gravix/Source/: pch.h
Gravix/Source/Asset/: Asset.cpp  Asset.h  AssetFileWatcher.cpp  AssetFileWatcher.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetManagerBase.cpp  AssetManagerBase.h  AssetMetadata.h  AsyncLoadRequest.h  EditorAssetManager.cpp  EditorAssetManager.h  RuntimeAssetManager.cpp  RuntimeAssetManager.h
Gravix/Source/Asset/AssetPack/: PakBuilder.h
Gravix/Source/Asset/Importers/: MaterialImporter.cpp  MaterialImporter.h  PipelineImporter.cpp  PipelineImporter.h  SceneImporter.cpp  SceneImporter.h  ShaderImporter.cpp  ShaderImporter.h  TextureImporter.cpp  TextureImporter.h
Gravix/Source/Core/: Application.cpp  Application.h  Buffer.h  Console.cpp  Console.h  Core.h  FileWatcher.cpp  FileWatcher.h  Gravix.h  Input.h  Layer.h  Log.cpp  Log.h  RefCounted.h  Scheduler.cpp  Scheduler.h  UUID.cpp  UUID.h  Window.h
Gravix/Source/Debug/: Instrumentor.h  ProfilerViewer.cpp  ProfilerViewer.h
Gravix/Source/Events/: Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Gravix/Source/Maths/: Maths.cpp  Maths.h
Gravix/Source/Physics/: PhysicsWorld.cpp  PhysicsWorld.h
Gravix/Source/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Gravix/Source/Project/: Project.cpp  Project.h
Gravix/Source/Reflections/: DynamicStruct.h  ReflectedStruct.h  ShaderReflection.h
Gravix/Source/Renderer/: CommandImpl.h  ImGuiBuild.cpp  ImGuiRender.cpp  ImGuiRender.h  Specification.h
Gravix/Source/Renderer/Generic/: Camera.h  Command.cpp  Command.h  Device.h  Framebuffer.cpp  Framebuffer.h  Material.cpp  Material.h  Mesh.cpp  MeshBuffer.cpp  MeshBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  Renderer2D.cpp  Renderer2D.h  Texture.cpp  Texture.h  VertexBuffer.h
Gravix/Source/Renderer/Vulkan/: VulkanCommandImpl.cpp  VulkanCommandImpl.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanMesh.cpp  VulkanMesh.h  VulkanMeshBuffer.cpp  VulkanMeshBuffer.h  VulkanRenderCaps.cpp  VulkanRenderCaps.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h
Gravix/Source/Scene/: ComponentRegistry.cpp  ComponentRegistry.h  Components.h  EditorCamera.cpp  EditorCamera.h  Entity.h  ImGuiHelpers.cpp  ImGuiHelpers.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h
Gravix/Source/Scene/ComponentRenderers/: BoxCollider2DComponentRenderer.cpp  BoxCollider2DComponentRenderer.h  CameraComponentRenderer.cpp  CameraComponentRenderer.h  CircleCollider2DComponentRenderer.cpp  CircleCollider2DComponentRenderer.h  CircleRendererComponentRenderer.cpp  CircleRendererComponentRenderer.h  ComponentOrderComponentRenderer.cpp  ComponentOrderComponentRenderer.h  Rigidbody2DComponentRenderer.cpp  Rigidbody2DComponentRenderer.h  ScriptComponentRenderer.cpp  ScriptComponentRenderer.h  SpriteRendererComponentRenderer.cpp  SpriteRendererComponentRenderer.h  TagComponentRenderer.cpp  TagComponentRenderer.h  TransformComponentRenderer.cpp  TransformComponentRenderer.h
Gravix/Source/Scripting/: EditorScriptEngine.cpp  EditorScriptEngine.h  EngineAPI.h  HostInstance.cpp  HostInstance.h  RuntimeScriptEngine.h  ScriptEngine.cpp  ScriptEngine.h  ScriptField.h  ScriptFieldHandler.cpp  ScriptFieldHandler.h  ScriptFieldRegistry.h  ScriptGlue.cpp  ScriptGlue.h  ScriptTypes.cpp  ScriptUtils.cpp  ScriptUtils.h
Gravix/Source/Scripting/Core/: ScriptEngine.cpp  ScriptEngine.h  ScriptTypes.h
Gravix/Source/Scripting/Editor/: EditorScriptEngine.cpp  EditorScriptEngine.h  ScriptFileWatcher.cpp  ScriptFileWatcher.h
Gravix/Source/Scripting/Fields/: ScriptField.h  ScriptFieldHandler.cpp  ScriptFieldHandler.h  ScriptFieldRegistry.cpp  ScriptFieldRegistry.h
Gravix/Source/Serialization/: BinaryDeserializer.h  BinarySerializer.h  YAMLConverters.h
Gravix/Source/Utils/: PlatformUtils.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderCompilerSystem.cpp  ShaderCompilerSystem.h  ShaderReflector.cpp  ShaderReflector.h  SlangTypeUtils.cpp  SlangTypeUtils.h  StringUtils.h
GravixScripting/: CMakeLists.txt
GravixScripting/Managed/: GravixScripting.csproj
GravixScripting/Managed/publish/: CSharpTesting.cs  Main.cs  ObjectManager.cs
GravixScripting/Source/: Export.h
GravixScripting/Source/Scripting/: ManagedObject.h  ScriptEngine.cpp  ScriptEngine.h
Orbit/: CMakeLists.txt
Orbit/Resources/: Orbit.aps  Orbit.rc  RCa08752
Orbit/Source/: App.cpp  AppLayer.cpp  AppLayer.h  ProjectManager.cpp  ProjectManager.h  SceneManager.cpp  SceneManager.h  SplashScreen.cpp  SplashScreen.h
Orbit/Source/Panels/: ConsolePanel.cpp  ConsolePanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  InspectorPanel.cpp  InspectorPanel.h  ProjectSettingsPanel.cpp  ProjectSettingsPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
Orbit/Source/UI/: EditorMenuBar.cpp  EditorMenuBar.h  EditorToolbar.cpp  EditorToolbar.h
Orbit/Source/Utils/: AssetFactory.cpp  AssetFactory.h  ExternalEditorLauncher.cpp  ExternalEditorLauncher.h  KeyboardShortcutHandler.cpp  KeyboardShortcutHandler.h
(+100 files in other folders)
